# YINI

./: .clang-format  .editorconfig  .gitignore  ACHIEVEMENT_REPORT.md  ARCHITECTURE.md  AUDIT_FINAL_SUMMARY.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  BENCHMARKING.md  CHANGELOG.md  CMakeLists.txt  COMPLETE_AUDIT_SUMMARY.md  COMPLETE_WORK_SUMMARY.md  COMPLETION_CERTIFICATE.txt  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_v3.0.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  DEEP_DIVE_AUDIT.md  DEEP_DIVE_SUGGESTIONS.md  DEVELOPMENT_SESSION_REPORT.md  DONE.md  DYNA_API_DESIGN.md  Doxyfile  ENHANCEMENT_PROGRESS.md  ENHANCEMENT_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_CHECKLIST.md  FINAL_AUDIT_REPORT.md  FINAL_AUDIT_REPORT_v3.0.md  FINAL_ENHANCEMENT_REPORT.md  FINAL_REPORT.md  FINAL_VERIFICATION.md  IMPLEMENTATION_FIX_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  IMPROVEMENTS.md  IMPROVEMENT_SUGGESTIONS.md  INDEX.md  ISSUES_AND_FIXES.md  (+80 more)
benchmarks/: CMakeLists.txt  ParserBenchmark.cpp  parser_benchmark.cpp
examples/cpp/: CMakeLists.txt  main.cpp
fuzz/: CMakeLists.txt  fuzzer.cpp
lsp/: CMakeLists.txt
src/: CMakeLists.txt  Interop.cpp  Interop.h  Json.cpp  Json.h  JsonDeserializer.cpp  JsonSerializer.cpp  Loader.cpp  Loader.h  Yini.cpp  YiniData.cpp  YiniFormatter.cpp  YiniManager.cpp  YiniParser.cpp  YiniSerializer.cpp  YiniTypes.h  YiniValue.cpp  YiniValueToString.cpp  YiniValueToString.hpp  c_api.cpp  c_api_internal.h  cli.cpp  main.cpp  yini.cpp  yini.h  yini_c_api.cpp  yini_c_api.h
src/API/: CSharpAPI.cpp  CSharpAPI.h
src/Api/: CMakeLists.txt  YiniApi.cpp  YiniApi.h
src/CLI/: CLI.cpp  CLI.h  CMakeLists.txt  Cooker.cpp  Cooker.h  main.cpp  yini_cli.cpp
src/Common/: Error.h
src/Core/: DynaValue.cpp  DynaValue.h  StringUtils.h  Types.cpp  Types.h  Validator.cpp  Validator.h  Value.cpp  Value.h  YiniData.cpp  YiniData.h  YiniException.h  YiniManager.cpp  YiniManager.h  YiniSection.cpp  YiniSection.h  YiniValue.cpp  YiniValue.h
src/Core/Serialization/: Deserializer.cpp  Deserializer.h  Format.h  Serializer.cpp  Serializer.h
src/Evaluator/: Evaluator.cpp  Evaluator.h
src/Interop/: CMakeLists.txt  YiniCApi.cpp  YiniCApi.h  YiniInterop.cpp  YiniInterop.h  yini_interop.cpp  yini_interop.h
src/Interpreter/: Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h
src/Json/: Json.cpp  Json.h
src/LS/: CMakeLists.txt  main.cpp
src/LSP/: CMakeLists.txt  CodeActionProvider.cpp  CompletionProvider.cpp  DefinitionProvider.cpp  DocumentManager.cpp  FoldingRangeProvider.cpp  FormattingProvider.cpp  HoverProvider.cpp  InlayHintsProvider.cpp  JSONRPCHandler.cpp  LSPServer.cpp  ReferenceProvider.cpp  RenameProvider.cpp  SemanticTokensProvider.cpp  SymbolProvider.cpp  WorkspaceSymbolProvider.cpp  main.cpp
src/LangServer/: CMakeLists.txt  main.cpp
src/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  LexerState.cpp  LexerState.h  Token.cpp  Token.h  lexer.cpp  lexer.h
src/Loader/: CMakeLists.txt  Loader.cpp  Loader.h  YbinFormat.h  YbinLoader.cpp  YbinLoader.h  YbinSerialization.h  YbinV2Format.h  YiniLoader.cpp  YiniLoader.h
src/Parser/: AST.cpp  AST.h  ASTNode.cpp  ASTNode.h  ASTVisitor.h  Ast.cpp  Ast.h  AstPrinter.cpp  AstPrinter.h  AstSerializer.cpp  AstSerializer.h  CMakeLists.txt  Interpreter.cpp  Parser.cpp  Parser.h  ParserState.cpp  ParserState.h  ParsingException.h  Strategies.cpp  Strategies.h  Value.cpp  Value.h  YINI_C_API.cpp  YMETA.cpp  YiniLoader.cpp  YiniLoader.h  Ymeta.cpp  Ymeta.h  parser.cpp  parser.h
src/Processor/: Processor.cpp  Processor.h
src/Resolver/: CMakeLists.txt  Resolver.cpp  Resolver.h  SemanticInfoVisitor.cpp  SemanticInfoVisitor.h
src/Runtime/: Runtime.cpp  Runtime.h  Value.h
src/Serializer/: YmetaSerializer.cpp  YmetaSerializer.h
src/Utils/: Endian.h
src/Validator/: CMakeLists.txt  Validator.cpp  Validator.h
src/YMETA/: YMETA.cpp  YMETA.h
src/YMeta/: Deserializer.cpp  Deserializer.h  Serializer.cpp  Serializer.h  YMeta.h
src/Yini/: BytecodeEvaluator.cs  CodeGenerator.cs  Compiler.cs  ConfigPatcher.cs  Evaluator.cs  IFileLoader.cs  ILocalizationProvider.cs  Lexer.cs  LexerFast.cs  LspHelper.cs  MetaGenerator.cs  Parser.cs  Serializer.cs  Token.cs  Validator.cs  Yini.csproj  YiniBinaryReader.cs  YiniBinaryWriter.cs  YiniException.cs
src/Yini.Analyzer/: Yini.Analyzer.csproj  YiniConfigAnalyzer.cs
src/Yini.CLI/: BuildCache.cs  Program.cs  Yini.CLI.csproj
src/Yini.Godot/: YiniResource.cs  YiniRuntime.cs
src/Yini.LSP/: Program.cs
src/Yini.Unity/: YiniAsset.cs  YiniHotReloader.cs  YiniLoader.cs  YiniManager.cs
src/Yini.Unity/Editor/: YiniInspectorWindow.cs
src/Ymeta/: CMakeLists.txt  YmetaManager.cpp  YmetaManager.h
src/c_api/: yini_c_api.cpp  yini_c_api.h
src/cli/: CMakeLists.txt  main.cpp  repl.cpp  repl.h
tests/: AdvancedParserTests.cpp  AdvancedResolverTests.cpp  CApiTest.cpp  CLITests.cpp  CMakeLists.txt  CliTest.cpp  ComplexInterpreterTest.cpp  CookerLoaderTests.cpp  CookerTests.cpp  DataTypeTest.cpp  DynaTest.cpp  EnvVarTest.cpp  EnvironmentTest.cpp  ErrorHandlingTest.cpp  ExpressionTest.cpp  IncludeTest.cpp  IncludeTests.cpp  InteropTests.cpp  InterpreterTest.cpp  LSPTests.cpp  LexerTest.cpp  LexerTests.cpp  Lexer_test.cpp  LspTest.cpp  ParserBugTests.cpp  ParserTest.cpp  ParserTests.cpp  Parser_test.cpp  ResolverTests.cpp  RichValueTests.cpp  SchemaTest.cpp  SerializationTest.cpp  SyntaxErrorTest.cpp  TestLexer.cpp  TestLexerExtended.cpp  TestLexerLiterals.cpp  TestLexerSections.cpp  TestParser.cpp  TestParserDataStructures.cpp  TestParserExpressions.cpp  (+68 more)
tests/CLI/: CMakeLists.txt  sample.yini  test_cli.sh
tests/Lexer/: CMakeLists.txt  test_lexer.cpp
tests/Parser/: CMakeLists.txt  test_dynamic_history.cpp  test_dynamic_updates.cpp  test_edge_cases.cpp  test_overflow.cpp  test_parser.cpp  test_schema.cpp  test_ymeta.cpp
tests/Yini.Tests/: AdvancedFeatureTests.cs  AdvancedTests.cs  Benchmarks.cs  CompilerTests.cs  DeepIntegrationTests.cs  EvaluatorTests.cs  FinalFeatureTests.cs  LspTests.cs  OptimizationTests.cs  SuggestionFeatureTests.cs  Yini.Tests.csproj
(+224 files in other folders)
